# fda_recall_checker

./: .gitignore  DEPLOYMENT.md  MANIFEST.in  MIGRATION_SUMMARY.md  QUICKSTART.md  QUICK_FIX_DB_PERMISSIONS.md  README.md  TROUBLESHOOTING.md  app.py  apps.txt  check_db.py  check_recall_fetch.py  database.py  debug_database.py  debug_record.py  debug_startup.sh  fetch_fda_recalls.py  fix_db_permissions.sh  fix_directory_permissions.sh  fix_log_permissions.sh  fix_permissions_now.sh  force_update.sh  gunicorn_config.py  init_app.py  migrate_add_history.py  models.py  nginx_troubleshooting.md  pyproject.toml  refetch_all_recalls.py  requirements.txt  routes.py  run.py  scheduler.py  setup.py  test_dashboard.py  test_erpnext_integration.py  test_extraction.py  test_imports.py  test_with_existing_recalls.py  update_app.sh  (+2 more)
fda_recall_checker/: fetch_fda_recalls.py  hooks.py  modules.txt
fda_recall_checker/doctype/fda_device_recall/: fda_device_recall.py
static/css/: style.css
templates/: base.html  index.html  recall_detail.html  recalls.html  stats.html
