[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda_recall_checker"
version = "0.0.1"
description = "FDA Recall Checker"
authors = [
  { name="SurgiShop", email="gary.starr@surgishop.com" }
]
dependencies = [
  "frappe>=15"
]
readme = "README.md"
license = { text = "MIT" }
